# VoxelThingYeah

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  THIRDPARTY.md  cube.fs  meson.build  runClient.bat  runServer.bat  toolchain-mingw.cmake
cmake/: FindENet.cmake
doc/: protocol.md  sounds.md  wishlist.md
include/: archive.h  config.h.in
shaders/: bgfx_shader.sh  compile-shaders.sh  cube_fs.frag  cube_vs.vert  generic.frag  generic.vert  selection.frag  sky.frag  (+4 more)
src/: CMakeLists.txt  block.cpp  block.h  blocktexture.h  camera.h  camera.hpp  chunk.cpp  chunk.h  chunkmanager.cpp  chunkmanager.h  chunkmodel.cpp  chunkmodel.h  chunkrenderer.cpp  chunkrenderer.h  direction.h  glad.c  inputmanager.cpp  inputmanager.h  main.cpp  player.cpp  player.h  raycast.cpp  raycast.h  shadermanager.cpp  shadermanager.h  textrender.cpp  textrender.h  texturemanager.cpp  texturemanager.h  vector.cpp  vector.h  window.h
src/client/: CMakeLists.txt  cl_main.cpp  cvar_clientside.cpp  cvar_clientside.h  cvar_clientside.hpp  devconsole.cpp  devconsole.hpp  gamestates.cpp  gamestates.hpp  inputmanager.cpp  inputmanager.hpp  main.cpp  packs.cpp  packs.hpp  splash.cpp  splash.hpp
src/client/blocks/: clientblockbase.hpp
src/client/entities/: CMakeLists.txt  entitybase.cpp  entitybase.hpp  entitycamera.hpp  entityplayer.cpp  entityplayer.hpp
src/client/gui/: 437.hpp  CMakeLists.txt  gui.cpp  gui.hpp  guistate.cpp  guistate.hpp  guistatemanager.cpp  guistatemanager.hpp  guistateoptions.cpp  guistateoptions.hpp  guistateplay.cpp  guistateplay.hpp  guitest.cpp  shtoigui.cpp  shtoigui.hpp
src/client/inventory/: CMakeLists.txt  clientitem.cpp  clientitem.hpp
src/client/network/: CMakeLists.txt  cl_network.cpp  client.cpp  client.hpp  clientmessages.cpp  network.cpp  network.hpp  servermessageparse.cpp
src/client/particles/: CMakeLists.txt  particle.cpp  particle.hpp  particledef.hpp  particleemitter.cpp  particleemitter.hpp  particlemanager.cpp  particlemanager.hpp  particlesystem.cpp  particlesystem.hpp
src/client/rendering/: CMakeLists.txt  blocktexture.cpp  blocktexture.hpp  chunkmodel.cpp  chunkmodel.hpp  errormdl.hpp  errorshader.hpp  glad.c  material.cpp  material.hpp  model.cpp  model.hpp  modelloader.cpp  modelloader.hpp  modelmanager.cpp  modelmanager.hpp  modelrenderer.cpp  modelrenderer.hpp  shadermanager.cpp  shadermanager.hpp  texturemanager.cpp  texturemanager.hpp
src/client/sdlstuff/: CMakeLists.txt  README.md  sdlwindow.cpp  sdlwindow.hpp
src/client/sound/: soundmanager.cpp  soundmanager.hpp
src/client/world/: CMakeLists.txt  chunk.cpp  chunk.hpp  world.cpp  world.hpp
src/entities/: entitybase.cpp  entitybase.h  entityplayer.cpp  entityplayer.h
src/gui/: gui.cpp  gui.h  gui.hpp
src/render/: CMakeLists.txt  material.cpp  material.hpp  model.cpp  model.hpp  render.cpp  render.hpp
src/rendering/: CMakeLists.txt  blocktexture.cpp  blocktexture.h  chunkmodel.cpp  chunkmodel.h  chunkrenderer.cpp  model.cpp  model.h  modelrenderer.cpp  modelrenderer.h  modelrenderer.hpp  shadermanager.cpp  shadermanager.h  texturemanager.cpp  texturemanager.h  texturemanager.hpp
src/sdlbgfx/: README.md  bgfxchunkrenderer.cpp  bgfxtexturemanager.cpp  sdlwindow.cpp  sdlwindow.h
src/sdlstuff/: sdlwindow.cpp  sdlwindow.h  sdlwindow.hpp
src/server/: CMakeLists.txt  cvar_serverside.cpp  cvar_serverside.h  cvar_serverside.hpp  main.cpp  sv_main.cpp
src/server/entities/: CMakeLists.txt  entitybase.hpp  entityplayer.cpp
src/server/network/: CMakeLists.txt  clientmessageparse.cpp  network.cpp  network.hpp  server.cpp  server.hpp  servermessages.cpp  sv_network.cpp
src/server/sound/: soundmanager.cpp  soundmanager.hpp
src/server/world/: CMakeLists.txt  block.cpp  world.cpp
src/shared/: CMakeLists.txt  blockdef.cpp  blockdef.hpp  colours.hpp  cvar.cpp  cvar.h  cvar.hpp  cvar_shared.cpp  cvar_shared.hpp  filesystem.cpp  filesystem.h  filesystem.hpp  inputmanager.cpp  inputmanager.h  inputmanager.hpp  logging.cpp  logging.h  logging.hpp  network.cpp  network.h  network.hpp  raycast.cpp  raycast.hpp  seethe.h  specialeffectdef.hpp  statemanager.cpp  statemanager.hpp  window.hpp
src/shared/block/: blockair.hpp  blockbase.cpp  blockbase.hpp
src/shared/blocks/: CMakeLists.txt  blockair.hpp  blockbase.cpp  blockbase.hpp  blockerror.hpp  blockgeneric.hpp  blockleaves.hpp  blockliquid.hpp  blockplant.hpp  blockslab.hpp  blocksnowlayer.hpp  blocksoundmaker.hpp  blockstone.hpp  blocktransgeneric.hpp  blockwool.hpp
src/shared/entities/: CMakeLists.txt  entities.cpp  entities.hpp  entitybase.cpp  entitybase.hpp  entitycamera.cpp  entitycamera.hpp  entityphysics.cpp  entityphysics.hpp  entityplayer.cpp  entityplayer.hpp  meegreefentitites.hpp
src/shared/inventory/: CMakeLists.txt  blockitem.cpp  blockitem.hpp  inventory.cpp  inventory.hpp  item.cpp  item.hpp
src/shared/localization/: CMakeLists.txt  localizer.cpp  localizer.hpp
src/shared/network/: CMakeLists.txt  netarchive.hpp  network.cpp  network.hpp  protocol.cpp  protocol.hpp  protocolmessages.cpp
src/shared/world/: CMakeLists.txt  block.cpp  block.hpp  chunk.cpp  chunk.hpp  jeneration.cpp  jeneration.hpp  physics.cpp  physics.hpp  raycast.cpp  raycast.hpp  world.cpp  world.hpp  worldsaver.cpp  worldsaver.hpp
src/shared/world/jeneration/: CMakeLists.txt  biomes.cpp  biomes.hpp  jeneration.cpp  jeneration.hpp  structure.cpp  structure.hpp
src/sound/: CMakeLists.txt  soundmanager.cpp  soundmanager.h  soundmanager.hpp
src/stuff_that_touches_sdl/: README.md  window.cpp
src/utility/: CMakeLists.txt  assorted.h  assorted.hpp  colour.cpp  colour.hpp  direction.h  direction.hpp  fastnoise.cpp  fastnoise.h  iutil.hpp  raycast.cpp  raycast.h  raycast.hpp  serialize.cpp  serialize.hpp  toml.hpp  tomlcpp.cpp  tomlcpp.hpp  types.hpp  utfz.cpp  vector.cpp  vector.h  vector.hpp  vector.inl
src/world/: CMakeLists.txt  block.cpp  block.h  block.hpp  blockdef.cpp  blockdef.h  chunk.cpp  chunk.h  chunkmanager.cpp  chunkmanager.h  physics.cpp  physics.h  physics.hpp  world.cpp  world.h  world.hpp
(+72 files in other folders)
